--- a/custom_components/besmart/manifest.json
+++ b/custom_components/besmart/manifest.json
@@ -1,11 +1,10 @@
 {
   "domain": "besmart",
-  "name": "HA BeSmart",
-  "version": "0.1",
-  "documentation": "https://github.com/muchasuerte/ha-besmart",
-  "issue_tracker": "https://github.com/muchasuerte/ha-besmart/issues",
+  "name": "BeSmart Thermostat",
+  "version": "0.2",
+  "documentation": "https://www.example.com",
+  "requirements": [],
   "dependencies": [],
-  "after_dependencies": ["http"],
-  "codeowners": ["@muchasuerte"],
-  "requirements": []
+  "codeowners": ["@riccardodori"],
+  "config_flow": true
 }
